Avoid zoom to focus on IOS

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
   margin: 0;  
 }
 
+input {
+  font-size: 16px;
+}
+
+select {
+  font-size: 16px;
+}
+
 a {
   color: #333;
   text-decoration: none;
-}
-
-.container {  
 }
